src/objects/SomDig_Auftragstyp__c.object
<CustomObject>
    <description>Abbildung von Auftragstypen (Mandantenprozesse) der SevenOne MEdia, welcher diverse EIgentschaften steuert wir Rechnungsstellung, FC etc.</description>
    <fields>
        <fullName>Inventarklasse__c</fullName>
        <description>Welche Inventarklasse(n) können bei diesem Auftragstyp vorkommen? Steuerung erfolgt via Objekt Inventarklasse, hier am Feld zur reinen Info hinterlegt (steuert von diesem Objekt aus keinen Workflow etc.)</description>
        <inlineHelpText>Welche Inventarklasse(n) können bei diesem Auftragstyp vorkommen? Steuerung erfolgt via Objekt Inventarklasse, hier am Feld zur reinen Info hinterlegt (steuert von diesem Objekt aus keinen Workflow etc.)</inlineHelpText>
        <label>Inventarklasse</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>EV</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>SB</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mig_ProdiaKey__c</fullName>
        <description>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</description>
        <inlineHelpText>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</inlineHelpText>
        <label>Mig_ProdiaKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_Agenturprovision__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Soll bei den Mediakampagnen bei diesem Auftragstyp Agenturprovision/AgentEarnings (AE) voreingestellt sein? Wenn Checkbox auf WAHR ist, wird Agenturprovision in Form eines Cashrabatts (15 % ) vom MN1-Wert der Medikampagne abgezogen (ergibt dann den MN2). Umsetzung erfolgt via Workflow/Feldaktualisierung auf Positions-Basis.</description>
        <inlineHelpText>Soll bei den Mediakampagnen bei diesem Auftragstyp Agenturprovision/AgentEarnings (AE) voreingestellt sein? Wenn Checkbox auf WAHR ist, wird Agenturprovision in Form eines Cashrabatts (15 % ) vom MN1-Wert der Medikampagne abgezogen (ergibt dann den MN2)</inlineHelpText>
        <label>Agenturprovision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_FcAbrechnungsmodell__c</fullName>
        <description>Optional kann ein am Auftragstyp hinterlegter FC nur für Positionen gelten, welche ein bestimmtes Abrechnungsmodell haben (also FC gilt dann nur für Kombi aus Auftragstyp und Abrechnungsmodell). Umsetzung erfolgt via Workflow/Feldaktualisierung auf Positions-Basis, wenn am Werbemittel noch kein FC hinterlegt ist.</description>
        <inlineHelpText>Optional kann ein am Auftragstyp hinterlegter FC nur für Positionen gelten, welche ein bestimmtes Abrechnungsmodell haben (also FC gilt dann nur für Kombi aus Auftragstyp und Abrechnungsmodell)</inlineHelpText>
        <label>FC Abrechnungsmodell</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>CPD</fullName>
                </value>
                <value>
                    <fullName>CPW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_FcAdServedEvery__c</fullName>
        <description>Hinterlegung der Anzahl pro Session, für welche die angegebene der Menge eines Frequenzy Cappings pro Auftragstyp gilt. Umsetzung erfolgt via Workflow/Feldaktualisierung auf Positions-Basis, wenn am Werbemittel noch kein FC hinterlegt ist.</description>
        <inlineHelpText>Hinterlegung der Anzahl pro Session, für welche die angegebene der Menge eines Frequenzy Cappings pro Auftragstyp gilt (wenn am Werbemittel noch kein FC hinterlget ist).</inlineHelpText>
        <label>FC Ad served every</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_FcPeriod__c</fullName>
        <description>Hinterlegung der Session, für welche die angegebene der Menge und Anzahl eines Frequenzy Cappings pro Auftragstyp gilt. Umsetzung erfolgt via Workflow/Feldaktualisierung auf Positions-Basis, wenn am Werbemittel noch kein FC hinterlegt ist.</description>
        <inlineHelpText>Hinterlegung der Session, für welche die angegebene der Menge und Anzahl eines Frequenzy Cappings pro Auftragstyp gilt (wenn am Werbemittel noch kein FC hinterlget ist).</inlineHelpText>
        <label>FC Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minute</fullName>
                </value>
                <value>
                    <fullName>Stunde</fullName>
                </value>
                <value>
                    <fullName>Tag</fullName>
                </value>
                <value>
                    <fullName>Woche</fullName>
                </value>
                <value>
                    <fullName>Monat</fullName>
                </value>
                <value>
                    <fullName>Jahr</fullName>
                </value>
                <value>
                    <fullName>Kampagne</fullName>
                </value>
                <value>
                    <fullName>Session</fullName>
                </value>
                <value>
                    <fullName>Browser</fullName>
                </value>
                <value>
                    <fullName>Besuch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_FcQuantity__c</fullName>
        <description>Hinterlegung der Menge eines Frequenzy Cappings pro Auftragstyp. Umsetzung erfolgt via Workflow/Feldaktualisierung auf Positions-Basis, wenn am Werbemittel noch kein FC hinterlegt ist.</description>
        <inlineHelpText>Hinterlegung der Menge eines Frequenzy Cappings pro Auftragstyp (wenn am Werbemittel noch kein FC hinterlget ist).</inlineHelpText>
        <label>FC Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_NullwertMediakampagne__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Soll bei den Mediakampagnen bei diesem Auftragstyp der Nettowert (MN1) auf 0 EUR gesetzt werden? Wenn Checkbox auf WAHR ist, wird pro Position ein Sonderrabatt in Höhe von 100 % vergeben was einen MN1-Wert von 0 EUR ergibt. Umsetzung erfolgt via Workflow/Feldaktualisierung auf Positions-Basis.</description>
        <inlineHelpText>Soll bei den Mediakampagnen bei diesem Auftragstyp der Nettowert (MN1) auf 0 EUR gesetzt werden? Wenn Checkbox auf WAHR ist, wird pro Position ein Sonderrabatt in Höhe von 100 % vergeben was einen MN1-Wert von 0 EUR ergibt.</inlineHelpText>
        <label>Nullwert Mediakampagne</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Rechnungstellung__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Sollen die Mediakampagnen bei diesem Auftragstyp abgerechnet werden? Wenn Checkbox auf WAHR ist, wird eine Rechnung gestellt. Wird via Workflow/Feldaktualisierung auf Mediakampagnen-Basis umgesetzt. Nur Billing-Profil kann die Voreinstellung überschreiben/bearbeiten und Checkbox &quot;Gutschrift&quot; ist nicht aktiv</description>
        <inlineHelpText>Sollen die Mediakampagnen bei diesem Auftragstyp abgerechnet werden? Wenn Checkbox auf WAHR ist, wird eine Rechnung gestellt (wenn Checkbox &quot;Gutschrift&quot; nicht ausgewählt ist). Nur Billing-Profil kann die Voreinstellung überschreiben/bearbeiten</inlineHelpText>
        <label>Rechnungstellung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_StrukturierteUeberlieferung__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Soll bei den Mediakampagnen bei diesem Auftragstyp die vom User gebuchte Impressions-Menge an den Adserver übergeben werden, ohne Berücksichtigung eines etwaigen hinterlegten Überlieferungsfaktors am Werbemittel? Wenn Checkbox auf WAHR ist, wird die gebuchte Menge übergeben (100 %) und nicht die Gebuchte Menge multipliziert mit dem Überbuchungsfaktor (100 % + X %). Umsetzung erfolgt via Workflow/Feldaktualisierung auf Positions-Basis.</description>
        <inlineHelpText>Soll bei den Mediakampagnen bei diesem Auftragstyp die vom User gebuchte Impressions-Menge an den Adserver übergeben werden, ohne Berücksichtigung eines etwaigen hinterlegten Überlieferungsfaktors am Werbemittel? Somit 100% und nicht 100+x%</inlineHelpText>
        <label>Strukturierte Überlieferung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Verfuegbarkeitsrelevant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wenn nicht angehakt, dürfen Positionen der Kampagne in jedem Fall durchgebucht werden.</description>
        <label>Verfügbarkeitsrelevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_VerhinderungAuftragssetzung__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bei angehakten Auftragstypen wird ein Setzen der Phase &quot;geschlossen und gewonnen&quot; verhindert, sofern AdS-relevante Positionen (Datensatztyp dfp) noch nicht an den AdServer durchgebucht/übermittelt wurden (KV 2794)</description>
        <inlineHelpText>Wenn angehakt, darf die Mediakampagne nur auf &quot;Geschlossen und gewonnen&quot; gesetzt werden, wenn die AdServer-Relevanten Positionen durchgebucht sind.</inlineHelpText>
        <label>Verhinderung Auftragssetzung</label>
        <type>Checkbox</type>
    </fields>
    <label>Auftragstyp</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Rechnungstellung__c</columns>
        <columns>SomDig_Agenturprovision__c</columns>
        <columns>SomDig_NullwertMediakampagne__c</columns>
        <columns>SomDig_Verfuegbarkeitsrelevant__c</columns>
        <columns>SomDig_VerhinderungAuftragssetzung__c</columns>
        <columns>SomDig_StrukturierteUeberlieferung__c</columns>
        <columns>SomDig_FcQuantity__c</columns>
        <columns>SomDig_FcPeriod__c</columns>
        <columns>SomDig_FcAbrechnungsmodell__c</columns>
        <columns>Inventarklasse__c</columns>
        <columns>Mig_ProdiaKey__c</columns>
        <columns>P7S1_IdOld__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
    </listViews>
    <nameField>
        <label>Auftragstyp-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auftragstypen</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>